testsuite/tests/ghc-regress/rename/should_fail/T1789.hs
{-# OPTIONS_GHC -fwarn-missing-import-lists -Werror #-}

-- Test Trac #1789
module T1789 where
import qualified Data.Set as Set